fixed hz scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 section .elementor-container h1 {
 	font-size: 54px;
 }
@@ -16,4 +21,31 @@ section .elementor-container h4 {
 
 section .elementor-container p {
 	font-size: 18px;
+}
+
+#site-header .header-inner {
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px;
+    padding: 10px 0;
+}
+
+#site-header .header-inner img {
+    width: 100%;
+    max-width: 150px;
+    height: auto;
+}
+
+@media (max-width: 768px) {
+    #site-header .header-inner {
+        justify-content: center;
+    }
+
+    #site-header .header-inner * {
+        text-align: center;
+    }
+
+    #site-header .header-inner img {
+        max-width: 100px;
+    }
 }
